--- a/css/common.css
+++ b/css/common.css
@@ -59,7 +59,8 @@ textarea {
 /* === reset === */
 
 /* === task-1 === */
-.container {
+
+.container-task-one {
   display: flex;
   flex-direction: column;
   gap: 24px;
@@ -109,3 +110,38 @@ ul > li .h2 {
 }
 
 /* === task-1 === */
+
+/* === task-2 === */
+
+.container-task-two {
+  width: 1440px;
+  margin: 0 auto;
+  padding: 100px 156px;
+  background-color: #fff;
+}
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 48px;
+  column-gap: 24px;
+}
+
+.gallery-item {
+  width: calc((100% - 48px) / 3);
+  height: 300px;
+}
+
+.gallery-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s;
+  object-fit: cover;
+}
+
+.gallery-img:hover {
+  transform: scale(1.05);
+}
+
+/* === task-2 === */
