--- a/css/common.css
+++ b/css/common.css
@@ -145,3 +145,46 @@ ul > li .h2 {
 }
 
 /* === task-2 === */
+
+/* === task-3 === */
+
+#name-input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+  width: 360px;
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+#name-input:focus {
+  outline: none;
+  border-color: #4a90e2;
+  box-shadow: 1px 1px 3px rgba(74, 144, 226, 0.5);
+}
+
+#name-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #b0b0b0;
+}
+
+.title-task {
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 1.33;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-top: 16px;
+}
+
+#name-output {
+  color: #2e2f42;
+}
+
+/* === task-3 === */
