--- a/css/common.css
+++ b/css/common.css
@@ -188,3 +188,65 @@ ul > li .h2 {
 }
 
 /* === task-3 === */
+
+/* === task-4 === */
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  max-width: 408px;
+  border-radius: 8px;
+  padding: 24px;
+  background-color: #fff;
+  gap: 16px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: auto;
+}
+
+.login-form label {
+  display: flex;
+  flex-direction: column;
+  font-weight: 400;
+}
+
+.login-form input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  padding: 8px 16px;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.login-form input:focus {
+  outline: none;
+  border-color: #4e75ff;
+  box-shadow: 0 1px 4px rgba(78, 117, 255, 0.5);
+}
+
+.login-form button {
+  margin-top: 8px;
+  border-radius: 8px;
+  padding: 8px 16px;
+  max-width: 86px;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: 0;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms;
+}
+
+.login-form button:hover {
+  background-color: #6c8cff;
+  box-shadow: 0 0 2px rgba(108, 140, 255, 0.4);
+}
+
+/* === task-4 === */
