--- a/css/common.css
+++ b/css/common.css
@@ -250,3 +250,54 @@ ul > li .h2 {
 }
 
 /* === task-4 === */
+
+/* === task-5 === */
+
+.go-back {
+  font-size: 35px;
+  font-weight: 700;
+  text-align: start;
+  color: rgb(255, 255, 255);
+  margin: 25px auto 15px 25px;
+  text-shadow: 3px 3px 4px rgba(0, 0, 0, 0.2);
+}
+.widget {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 16px;
+  align-items: stretch;
+  width: 345px;
+  height: 280px;
+  background-color: #fff;
+  border-radius: 8px;
+  margin: 100px auto auto;
+  padding: 100px 88px;
+  font-size: 16px;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.widget button {
+  border-radius: 8px;
+  padding: 8px 16px;
+  max-width: 148px;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #fff;
+  border: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms;
+}
+
+.widget button:hover {
+  background-color: #6c8cff;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.2);
+}
+
+/* === task-5 === */
